--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">FreeLocationProvider Test Bench</string>
     <string name="noTokenDialogTitle">Error: no mapbox access token</string>
     <string name="noTokenDialogBody">Please put your mapbox access token to res/values/mapbox_access_token.xml</string>
-    <string name="mapbox_access_token">pk.eyJ1IjoicHdhcmRldiIsImEiOiJjbGZ6aHl5OHkwZXd2M2VvNzB6dzF3cmE5In0.1lIjH-uVMW0tjnkBPo5vAw</string>
+    <string name="mapbox_access_token">Put your own token here</string>
 </resources>
